--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -4,7 +4,7 @@
 	2015-06-29  Matthew Wahab  <matthew.wahab@arm.com>
 
 	PR target/65697
-	* config/armc/arm.c (arm_split_atomic_op): For ARMv8, replace an
+	* config/arm/arm.c (arm_split_atomic_op): For ARMv8, replace an
 	initial acquire barrier with final barrier.
 
 2015-08-05  Matthew Wahab  <matthew.wahab@arm.com>
