Backport from trunk: 	2015-06-29  Matthew Wahab  <matthew.wahab@arm.com>
	PR target/65697
	* config/arm/arm.c (arm_split_compare_and_swap): For ARMv8,
	replace an initial acquire barrier with final barrier.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226627 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -4,6 +4,15 @@
 	2015-06-29  Matthew Wahab  <matthew.wahab@arm.com>
 
 	PR target/65697
+	* config/arm/arm.c (arm_split_compare_and_swap): For ARMv8,
+	replace an initial acquire barrier with final barrier.
+
+2015-08-05  Matthew Wahab  <matthew.wahab@arm.com>
+
+	Backport from trunk:
+	2015-06-29  Matthew Wahab  <matthew.wahab@arm.com>
+
+	PR target/65697
 	* config/arm/arm.c (arm_split_atomic_op): For ARMv8, replace an
 	initial acquire barrier with final barrier.
 
