--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2015-08-05  Jason Merrill  <jason@redhat.com>
+
+	* decl.c (start_decl): Don't push the plain VAR_DECL for a
+	variable template.
+
 2015-07-30  Jason Merrill  <jason@redhat.com>
 
 	DR 1558
