PR c++/65195 	PR c++/66619 	* semantics.c (finish_id_expression): Call convert_from_reference 	for variable template.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226656 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2015-08-05  Jason Merrill  <jason@redhat.com>
 
+	PR c++/65195
+	PR c++/66619
+	* semantics.c (finish_id_expression): Call convert_from_reference
+	for variable template.
+
 	PR c++/66336
 	* pt.c (find_parameter_packs_r): Handle variable templates.
 	(variable_template_specialization_p): New.
