PR c++/67130 	PR c++/67131 	PR c++/66260 	* mangle.c (write_expression) [TEMPLATE_ID_EXPR]: Handle variable 	templates. 	* pt.c (tsubst_copy_and_build): Check for argument substitution 	failure.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226677 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,13 @@
+2015-08-06  Jason Merrill  <jason@redhat.com>
+
+	PR c++/67130
+	PR c++/67131
+	PR c++/66260
+	* mangle.c (write_expression) [TEMPLATE_ID_EXPR]: Handle variable
+	templates.
+	* pt.c (tsubst_copy_and_build): Check for argument substitution
+	failure.
+
 2015-08-05  Jason Merrill  <jason@redhat.com>
 
 	PR c++/66260
