PR c++/66533 	* parser.c (cp_parser_primary_expression): Don't skip to the end 	of the statement if we're parsing tentatively.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226685 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2015-08-06  Jason Merrill  <jason@redhat.com>
 
+	PR c++/66533
+	* parser.c (cp_parser_primary_expression): Don't skip to the end
+	of the statement if we're parsing tentatively.
+
 	PR c++/67130
 	PR c++/67131
 	PR c++/66260
