jit.dg/test-benchmark.c: add a summary of timings
gcc/testsuite/ChangeLog
2015-08-06  David Malcolm  <dmalcolm@redhat.com>

	Backport from trunk r226697:
	2015-08-06  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/test-benchmark.c (main): Record all elapsed times at each
	optimization level, and print a summary at the end.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226698 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2015-08-06  David Malcolm  <dmalcolm@redhat.com>
+
+	Backport from trunk r226697:
+	2015-08-06  David Malcolm  <dmalcolm@redhat.com>
+
+	* jit.dg/test-benchmark.c (main): Record all elapsed times at each
+	optimization level, and print a summary at the end.
+
 2015-08-05  Mikael Morin  <mikael@gcc.gnu.org>
 
 	PR fortran/64921
