--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2015-08-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/67104
+	* constexpr.c (cxx_eval_array_reference): Handle sparse
+	CONSTRUCTORs.
+
 2015-08-14  Jason Merrill  <jason@redhat.com>
 
 	PR c++/65974
