--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2015-08-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/66919
+	* pt.c (tsubst_copy): Pass complain to mark_used, check return value.
+
 2015-08-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/67244
