--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2015-08-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/58063
+	* tree.c (bot_manip): Remap SAVE_EXPR.
+
 2015-07-16  Marek Polacek  <polacek@redhat.com>
 
 	2015-07-08  Marek Polacek  <polacek@redhat.com>
