--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2015-08-17  Jason Merrill  <jason@redhat.com>
 
+	PR c++/66957
+	* search.c (protected_accessible_p): Revert fix for 38579.
+
 	PR c++/58063
 	* tree.c (bot_manip): Remap SAVE_EXPR.
 
