S390: Fix vec_load_bndry operand type
    Backport from mainline
    
    gcc/ChangeLog
    2015-08-21  Dominik Vogt  <vogt@linux.vnet.ibm.com>
    
	* config/s390/s390-builtins.def: Fix value range of vec_load_bndry.
    
    gcc/testsuite/ChangeLog
    2015-08-21  Dominik Vogt  <vogt@linux.vnet.ibm.com>
    
	* gcc.target/s390/zvector/vec-load_bndry-1.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227166 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2015-08-25  Dominik Vogt  <vogt@linux.vnet.ibm.com>
+
+	Backport from mainline
+	2015-08-21  Dominik Vogt  <vogt@linux.vnet.ibm.com>
+
+    	* config/s390/s390-builtins.def: Fix value range of vec_load_bndry.
+
 2015-08-24  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Back port from mainline:
