PR c/67495 	* c-parser.c (c_parser_omp_atomic): Use c_parser_cast_expression 	instead of c_parser_unary_expression.  If the result is !lvalue_p, 	wrap the result of c_fully_fold into NON_LVALUE_EXPR.
	* gcc.dg/gomp/pr67495.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227580 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c/ChangeLog
+++ b/gcc/c/ChangeLog
@@ -1,3 +1,10 @@
+2015-09-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/67495
+	* c-parser.c (c_parser_omp_atomic): Use c_parser_cast_expression
+	instead of c_parser_unary_expression.  If the result is !lvalue_p,
+	wrap the result of c_fully_fold into NON_LVALUE_EXPR.
+
 2015-07-16  Release Manager
 
 	* GCC 5.2.0 released.
