PR c/67500 	* c-parser.c (c_parser_omp_clause_aligned, 	c_parser_omp_clause_safelen, c_parser_omp_clause_simdlen): Fix up 	test for errors. 	* c-decl.c (temp_pop_parm_decls): Allow b->decl equal to 	error_mark_node.
	* gcc.dg/gomp/pr67500.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227581 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c/ChangeLog
+++ b/gcc/c/ChangeLog
@@ -1,5 +1,12 @@
 2015-09-09  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/67500
+	* c-parser.c (c_parser_omp_clause_aligned,
+	c_parser_omp_clause_safelen, c_parser_omp_clause_simdlen): Fix up
+	test for errors.
+	* c-decl.c (temp_pop_parm_decls): Allow b->decl equal to
+	error_mark_node.
+
 	PR c/67495
 	* c-parser.c (c_parser_omp_atomic): Use c_parser_cast_expression
 	instead of c_parser_unary_expression.  If the result is !lvalue_p,
