PR c++/67504 	* parser.c (cp_parser_omp_clause_collapse): Test tree_fits_shwi_p 	before INTEGRAL_TYPE_P test.
	* g++.dg/gomp/pr67504.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227583 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2015-09-09  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/67504
+	* g++.dg/gomp/pr67504.C: New test.
+
 	PR c/67501
 	* c-c++-common/gomp/pr67501.c: New test.
 
