PR c/67502 	* c-parser.c (c_parser_omp_for_loop): Emit DECL_EXPR stmts 	into OMP_FOR_PRE_BODY rather than before the loop.
	* c-c++-common/gomp/pr67502.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@227612 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2015-09-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/67502
+	* c-c++-common/gomp/pr67502.c: New test.
+
 2015-09-09  Marek Polacek  <polacek@redhat.com>
 
 	Backport from mainline:
